Add Acknowledgements section

--- a/neuroevolution_of_augmenting_topologies_paper_3.tex
+++ b/neuroevolution_of_augmenting_topologies_paper_3.tex
@@ -208,6 +208,14 @@ At time of envisioning of NEAT was Neuroevolution most promising learning approa
 
 % ######################################################################################################################
 
+\section{Acknowledgments}
+
+Thanks to...
+
+
+
+% ######################################################################################################################
+
 \begin{thebibliography}{5}
 
   \bibitem{yao99}
