Add proper Acknowledgements

--- a/neuroevolution_of_augmenting_topologies_paper_3.tex
+++ b/neuroevolution_of_augmenting_topologies_paper_3.tex
@@ -210,7 +210,7 @@ At time of envisioning of NEAT was Neuroevolution most promising learning approa
 
 \section{Acknowledgments}
 
-Thanks to...
+I wish to thank Rezsa Farahani, from the Google Brain team, and Michael Adam, from the Technical University Munich, for their support and valuable input.
 
 
 
