Add comments about what to research for the outstanding NE research

--- a/neuroevolution_of_augmenting_topologies_paper_3.tex
+++ b/neuroevolution_of_augmenting_topologies_paper_3.tex
@@ -128,12 +128,17 @@ All those Details of the neuroevolution process, e.g. how the encoding scheme sp
 
 
 \subsubsection{Landmark Research in Neuroevolution}
-% https://www.oreilly.com/ideas/neuroevolution-a-different-kind-of-deep-learning
 % Past and Current Research in Neuroevolution (Also specify the explicit Neuroevolution algorithms when getting to the specific research (NEAT, HyperNEAT, DeepNeurevolution, etc))
-% Include comparison of landmark research with other Reinforcement Learning Techniques (Deep Q-Learning, etc). I am thinking here especiall about Real, et al 2019
-% Check out the research done by Uber-Research
-
-
+% https://www.inovex.de/blog/neuroevolution/
+% https://www.oreilly.com/ideas/neuroevolution-a-different-kind-of-deep-learning
+% https://en.wikipedia.org/wiki/Evolutionary_algorithm
+% https://en.wikipedia.org/wiki/Genetic_algorithm
+% https://en.wikipedia.org/wiki/Neuroevolution
+% https://en.wikipedia.org/wiki/Neuroevolution_of_augmenting_topologies
+% uber research
+% evocnn
+% see all scholarpedia pages in bibliography
+% see all papers listed in __outstanding_papers
 
 
 
