Add notes about what to research for NEAT

--- a/neuroevolution_of_augmenting_topologies_paper_3.tex
+++ b/neuroevolution_of_augmenting_topologies_paper_3.tex
@@ -149,6 +149,8 @@ All those Details of the neuroevolution process, e.g. how the encoding scheme sp
 
 \section{NeuroEvolution of Augmenting Topologies (NEAT)}
 
+% Read papers sta02_1, sta02_2, sta04 again
+
 <Section Introduction>
 
 Neuroevolution of Augmenting Topologies (short form: NEAT) was first introduced in the paper "Evolving Neural Networks through Augmenting Topologies" by Kenneth O.Stanley and Risto Miikkulainen in the year 2002. [cite] It was finalized and shown to be superior to any preceding neuroevolution algorithm in Stanley's PhD thesis "Efficient Evolution of Neural Networks through Complexification" in 2004. [cite]
