Add Landmark points that I will talk about

--- a/neuroevolution_of_augmenting_topologies_paper_3.tex
+++ b/neuroevolution_of_augmenting_topologies_paper_3.tex
@@ -128,22 +128,6 @@ All those Details of the neuroevolution process, e.g. how the encoding scheme sp
 
 
 \subsection{Landmark Research in Neuroevolution}
-% https://www.inovex.de/blog/neuroevolution/
-% https://www.oreilly.com/ideas/neuroevolution-a-different-kind-of-deep-learning
-% https://en.wikipedia.org/wiki/Evolutionary_algorithm
-% https://en.wikipedia.org/wiki/Genetic_algorithm
-% https://en.wikipedia.org/wiki/Neuroevolution
-% https://en.wikipedia.org/wiki/Neuroevolution_of_augmenting_topologies
-% uber research
-% evocnn
-% see all scholarpedia pages in bibliography
-% see all papers listed in __outstanding_papers
-% see DeepNeuroevolution by Miikkulainen
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% aspects in chronological order
 
 % Neurevolution first gained significatn traction in the reserach commmunity with NEAT, as it was the first to address fundamental shortcomings from which earlier research suffered (e.g. ... https://en.wikipedia.org/wiki/Neuroevolution)
 
@@ -162,24 +146,26 @@ NEAT (2002)
 
 HyperNEAT (2009)
 
-ES-HyperNEAT
+ES-HyperNEAT (2011)
 
-Novelty Search
+Novelty Search (2011)
 % Novelty search is another invention that abandons the goal to maximise a fitness function. Instead, it rewards individuals that behave differently. This change often leads to much better solutions in the end because novel solutions perform badly in the beginning and need time to fully manifest their potential.
 
 Coevolution DeepNEAT (2017)
 % Miikkulainen, Liang - Evolving Deep Neural Networks
 % See innovex summary
 
-Uber Research (2017/2018)
+real17 (2017)
+% Include progress picture of the population of image classifier over time
 
-EvoCNN (2017/2019)
+EvoCNN (2017)
 % Sun, Xue - Evolving Deep Convolutional Neural Networks for Image classification
 % see innovex summary
 
-real17 (2017)
 
-% Include progress picture of the population of image classifier over time
+Uber Research (End 2017 / more in 2018)
+
+liu18 (2018)
 
 real19 (2019)
 
